...
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MapboxFragment"
    android:id="@+id/mapFragment">

    <!-- Map view -->
    <com.mapbox.mapboxsdk.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        mapbox:layout_constraintBottom_toBottomOf="parent"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toStartOf="parent"
...

        mapbox:mapbox_cameraZoom="12.0">

    </com.mapbox.mapboxsdk.maps.MapView>

    <Button
        android:id="@+id/next_fragment_button"
        android:layout_width="@dimen/search_button_width"
        android:layout_height="@dimen/search_button_height"
        android:layout_marginBottom="@dimen/bottom_content_margin"
        android:background="@color/transparent_white"

        android:paddingStart="@dimen/search_button_horizontal_margin"
...
            android:textColor="@color/white"
            android:textSize="@dimen/medium_text_size" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/onboardingAgain"

        android:layout_width="32dp"
        android:layout_height="32dp"

        android:background="@drawable/round_corners_top_bottom_white_picker"
        android:src="@drawable/ic_icon_interrogation"
...
        mapbox:layout_constraintBottom_toBottomOf="@+id/mapView"
        mapbox:layout_constraintEnd_toEndOf="parent"
        mapbox:layout_constraintStart_toEndOf="@id/next_fragment_button">

        <ImageButton
            android:contentDescription="@string/my_location_button"
            android:id="@+id/myLocation"
            android:layout_width="@dimen/small_button_size"
            android:layout_height="@dimen/small_button_size"

            android:background="@drawable/round_corners_top_bottom_white_picker"
            android:src="@drawable/ic_icon_location" />

        <ImageButton
            android:contentDescription="@string/zoom_in"
            android:id="@+id/zoomIn"
            android:layout_width="@dimen/small_button_size"
            android:layout_height="@dimen/small_button_size"

            android:layout_below="@id/myLocation"
            android:layout_marginTop="@dimen/zoom_in_margin_top"
            android:background="@drawable/round_corners_top_mapbtn"
            android:src="@drawable/ic_icon_plus" />

        <ImageButton
            android:contentDescription="@string/zoom_out"
            android:id="@+id/zoomOut"
            android:layout_width="@dimen/small_button_size"
            android:layout_height="@dimen/small_button_size"

            android:layout_below="@id/zoomIn"
            android:background="@drawable/round_corners_bottom_matbtn"
            android:src="@drawable/ic_icon_minus" />
...
